spacing fix

--- a/css/mod1.css
+++ b/css/mod1.css
@@ -20,6 +20,8 @@
 	float: left;
 	padding:1rem;
 	margin-right:5px;
+	margin-bottom: 1rem;
+	margin-top: 0rem;
 	max-width: 35rem;
 	
 }
